Update on Overleaf.

--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -1,5 +1,5 @@
 \newcommand{\papertitle}{%
-  Kronecker-factored Approximate Gauß-Newton method in PINNs 
+  A Kronecker-factored Approximate Gauß-Newton Method for Physics-Informed Neural Networks 
 }
 \title{\papertitle}
 
