Update on Overleaf.

--- a/paper/sections/background_pinns.tex
+++ b/paper/sections/background_pinns.tex
@@ -1,6 +1,6 @@
 We work with the following standard feedforward networks.
 
-\paragraph{Sequential NNs} Consider a sequential neural network $%u_{\vtheta} = f^{(L)}_{\vtheta^{(L)}} \circ f^{(L-1)}_{\vtheta^{(L-1)}} \circ \ldots \circ f^{(1)}_{\vtheta^{(1)}}
+\paragraph{Sequential neural networks} Consider a \emph{sequential neural network} $%u_{\vtheta} = f^{(L)}_{\vtheta^{(L)}} \circ f^{(L-1)}_{\vtheta^{(L-1)}} \circ \ldots \circ f^{(1)}_{\vtheta^{(1)}}
 u_{\vtheta} = f_{\vtheta^{(L)}} \circ f_{\vtheta^{(L-1)}} \circ \ldots \circ f_{\vtheta^{(1)}}
 $ with depth $L\in\mathbb N$ that consists of layers %$f^{(l)}_{\vtheta^{(l)}}$
 \begin{align}
