--- a/paper/main.tex
+++ b/paper/main.tex
@@ -27,13 +27,21 @@
 \maketitle
 
 \begin{abstract}
-  PINNs are hard to train with first-order methods.
-  To train PINNs efficiently, we need to take into account the geometry implied by the PDE operator.
-  Existing methods that consider this geometry compute and invert the full Gramian.
-  However, these ENGD-based methods do not scale well to architectures with many parameters due to the quadratic memory and cubic time complexity of storing and inverting the Gramian.
-  The challenge to develop approximations to the Gramian is that it requires taking the parameter derivative of the PDE operator, which itself contains higher-order derivative.
-  Here, we propose a Kronecker-factored approximation for the Gramian, which scales more favourably than existing approaches in terms of both time and memory, while showing similar performance downstream.
+  Physics-Informed Neural Networks are hard to train with first-order methods. Recently, second-order methods like natural gradients and Gauß-Newton methods in the residual have shown promising performance. However, they come with a high computational cost per iteration. Using higher-order forward mode differentiation, we propose a Kronecker-Factored approximation of the Gauß-Newton matrix that involves PDE-specific terms. We provide an efficient implementation and an experimental evaluation. 
+  %To train PINNs efficiently, it has been observed that taking the geometry implied by the PDE operator.
+  %Existing methods that consider this geometry compute and invert the full Gramian.
+  %However, these ENGD-based methods do not scale well to architectures with many parameters due to the quadratic memory and cubic time complexity of storing and inverting the Gramian.
+  %The challenge to develop approximations to the Gramian is that it requires taking the parameter derivative of the PDE operator, which itself contains higher-order derivative.
+  %Here, we propose a Kronecker-factored approximation for the Gramian, which scales more favourably than existing approaches in terms of both time and memory, while showing similar performance downstream.
 \end{abstract}
+
+TODOs: 
+\begin{itemize}
+    \item debug KFAC 
+    \item small problems (compare everything), medium size problems (compare to BFGS / LBFGS), large problems (compare to Adam, to "naive" KFAC) 
+    \item what about Hessian free?
+    \item understand what people mean by KFAC in the VMC community 
+\end{itemize}
 
 \section{Introduction}
 \input{sections/introduction.tex}
