Update on Overleaf.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -40,7 +40,7 @@ TODOs:
     \item debug KFAC 
     \item small problems (compare everything), medium size problems (compare to BFGS / LBFGS), large problems (compare to Adam, to "naive" KFAC) 
     \item what about Hessian free?
-    \item understand what people mean by KFAC in the VMC community 
+    %\item understand what people mean by KFAC in the VMC community 
 \end{itemize}
 
 \section{Introduction}
