--- a/paper/references.bib
+++ b/paper/references.bib
@@ -407,3 +407,32 @@
   booktitle =    {International Conference on Learning Representations (ICLR)},
   year =         2020,
 }
+
+@article{stokes2020quantum,
+  title={Quantum natural gradient},
+  author={Stokes, James and Izaac, Josh and Killoran, Nathan and Carleo, Giuseppe},
+  journal={Quantum},
+  volume={4},
+  pages={269},
+  year={2020},
+  publisher={Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften}
+}
+
+@article{webber2022rayleigh,
+  title={Rayleigh-Gauss-Newton optimization with enhanced sampling for variational Monte Carlo},
+  author={Webber, Robert J and Lindsey, Michael},
+  journal={Physical Review Research},
+  volume={4},
+  number={3},
+  pages={033099},
+  year={2022},
+  publisher={APS}
+}
+
+@article{kunstner2019limitations,
+  title={Limitations of the empirical fisher approximation for natural gradient descent},
+  author={Kunstner, Frederik and Hennig, Philipp and Balles, Lukas},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
