--- a/paper/sections/contribution.tex
+++ b/paper/sections/contribution.tex
@@ -132,6 +132,8 @@ We leave this additions to future work.
 One could also merge the backward pass for each Gramian with that of its loss into a single backward traversal rather than two sequential ones, e.g.\,as done in \cite{dangel2020backpack}.
 However, then one needs to manually implement the additional backpropagation (through both the normal forward pass, but also through the forward Laplacian pass).
 
+\todo[inline]{should we provide a pseudo code?}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
