--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -23,9 +23,10 @@ More precisely, we summarize our contributions as follows:
 
 \paragraph{Related work}
 \begin{itemize}
-\item OG KFAC papers: \cite{martens2015optimizing}, \cite{martens2018kroneckerfactored}, double check similarities to RNNs
-\item KFAC for Rayleigh quotients:
-\item PINNs: recent preconditioning papers
+    \item Optimization in PINNs: loss weighting, sampling strategies, not super successful though
+    \item Preconditioning / second-order methods for PINNs: recent trend, second-order optimizers work better, e.g., BFGS, but function-space inspired methods tend to perform the best; downside: don't scale 
+    \item OG KFAC papers: \cite{martens2015optimizing}, \cite{martens2018kroneckerfactored}, double check similarities to RNNs
+    \item KFAC for Rayleigh quotients:
 \end{itemize}
 
 %%% Local Variables:
